<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/abp"
            android:icon="@drawable/abp"
            android:title="@string/abp"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/ajtk"
            android:icon="@drawable/aajtk"
            android:title="@string/ajtk"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/ndtv"
            android:icon="@drawable/ndtv"
            android:title="@string/ndt"
            android:menuCategory="secondary"/>
    </group>
    <item android:title="@string/upcoming"
        android:menuCategory="secondary">
        <menu>
            <item
                android:id="@+id/zeenws"
                android:icon="@drawable/zeenws"
                android:title="@string/zeenws"
                android:menuCategory="secondary"/>
        </menu>
    </item>

</menu>